<resources>

    <string name="app_name">MotionMusic</string>
    <!--String in menu_main.xml -->

    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about">About</string>


    <string name="TEST">Test</string>
    <string name="title_activity_settings">Settings</string>
    <!--====================================================-->
    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <!--
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Doe</string>
    -->
    <!-- Play mode selection -->
    <string name="pref_play_mode_selection">Select Play mode</string>
    <string-array name="pref_play_mode_available">
        <item>Hands Orientation and Sweeps</item>
        <item>Hands Orientation Only</item>
    </string-array>
    <string-array name="pref_play_mode_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <!-- Sound mode selection -->
    <string name="pref_sound_mode_selection">Select Sound mode</string>
    <string-array name="pref_sound_mode_available">
        <item>Music</item>
        <item>Sound Effects</item>

    </string-array>
    <string-array name="pref_sound_mode_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <!-- Ignore body movement -->
    <string name="pref_enable_body_movement">Enable Body Movement</string>
    <string name="pref_description_enable_body_movement">Enabling this will disable the
        body movement cancellation
    </string>
    <!--=======================================================-->
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--String related to playmode-->
    <string name="pref_config">Configurations</string>
    <!--String for Audio Settings-->
    <string name="pref_header_sound">Sound</string>

    <!--**********************LEFT HAND*****************************-->
    <string name="pref_volume_switch_left_instrument">Left Instrument</string>
    <string name="pref_volume_seek_left_instrument">Left Instrument Volume</string>
    <string name="pref_volume_summary_left_instrument">Volume of the left instrument</string>
    <string name="pref_volume_summary_right_instrument">Volume of the right instrument</string>
    <string name="pref_effect_level_summary">Level of the Effect</string>
    <string name="pref_effect_volume_summary">Volume of the Effect</string>
    <!--Left effect string names for preference page-->
    <!--Effect 1-->
    <string name="pref_left_effect_1_title">Left Effect 1</string>
    <string name="pref_left_effect_1_volume">Left Effect 1 Volume</string>
    <string name="pref_left_effect_1_level">Left Effect 1 Level</string>
    <!--Effect 2-->
    <string name="pref_left_effect_2_title">Left Effect 2</string>
    <string name="pref_left_effect_2_volume">Left Effect 2 Volume</string>
    <string name="pref_left_effect_2_level">Left Effect 2 Level</string>
    <!--Effect 3-->
    <string name="pref_left_effect_3_title">Left Effect 3</string>
    <string name="pref_left_effect_3_volume">Left Effect 3 Volume</string>
    <string name="pref_left_effect_3_level">Left Effect 3 Level</string>
    <!--***************************************************************************-->

    <!--**********************RIGHT HAND*****************************-->
    <string name="pref_volume_switch_right_instrument">Right Instrument</string>
    <string name="pref_volume_seek_right_instrument">Right Instrument Volume</string>
    <!--Right effect string names for preference page-->
    <!--Effect 1-->
    <string name="pref_right_effect_1_title">Right Effect 1</string>
    <string name="pref_right_effect_1_volume">Right Effect 1 Volume</string>
    <string name="pref_right_effect_1_level">Right Effect 1 Level</string>
    <!--Effect 2-->
    <string name="pref_right_effect_2_title">Right Effect 2</string>
    <string name="pref_right_effect_2_volume">Right Effect 2 Volume</string>
    <string name="pref_right_effect_2_level">Right Effect 2 Level</string>
    <!--Effect 3-->
    <string name="pref_right_effect_3_title">Right Effect 3</string>
    <string name="pref_right_effect_3_volume">Right Effect 3 Volume</string>
    <string name="pref_right_effect_3_level">Right Effect 3 Level</string>
    <string name="title_activity_accelerometer">accelerometerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bluetooth_test">BluetoothTest</string>
    <!--***************************************************************************-->

</resources>
